# fastapi_swagger2

./: LICENSE  README.md  pyproject.toml
scripts/: build.sh  format.sh  lint.sh  publish.sh  test.sh
src/fastapi_swagger2/: __init__.py  constants.py  models.py  utils.py
