[build-system]
requires = ["hatchling", "flit_core >=3.2,<4"]
build-backend = "hatchling.build"

[project]
name = "fastapi_swagger2"
description = "Swagger2 support for FastAPI framework"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
    { name = "Viraj Kanwade", email = "virajk.oib@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi >=0.100.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/virajkanwade/fastapi_swagger2"
Documentation = "https://github.com/virajkanwade/fastapi_swagger2"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "coverage[toml] >= 6.5.0,< 8.0",
    "mypy ==1.3.0",
    "ruff ==0.0.272",
    "black == 23.3.0",
    "isort >=5.0.6,<6.0.0",
    "httpx >=0.23.0,<0.24.0",
]
dev = [
    "ruff ==0.0.272",
]
all = [
    "httpx >=0.23.0",
]

[tool.hatch.version]
path = "src/fastapi_swagger2/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
